--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap");
 :root {
-  --color-enfasis: #FF0000;
+  --color-enfasis: #ffc404;
 }
 * {
   margin: 0;
