--- a/estilo.css
+++ b/estilo.css
@@ -1,73 +1,530 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&display=swap");
-:root {
-  --color-enfasis: #ffc404;
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
+:root{
+  --color-primary:#000;
+  --color-secondary:#fff;
+  --color-enfasis:#ffc404;
 }
-* {
-  margin: 0;
-  padding: 0;
+
+*{
+  font-family: 'Space Grotesk', sans-serif;
+  margin:0; padding:0;
   box-sizing: border-box;
-  font-family: "Montserrat";
-  font-size: 16px;
-}
-
-html.sr .load-hidden {
-  visibility: hidden;
-}
-
-/* *********************/
-/* seccion I N I C I O */
-/* *********************/
-#inicio header a {
+  outline: none;
   text-decoration: none;
+  transition: all .2s linear;
+  text-transform: capitalize;
 }
-#inicio header {
-  background-color: rgba(0, 0, 0, 0.8);
+
+*::selection{
+  background:var(--color-enfasis);
+  color:var(--color-primary);
+}
+
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body{
+  overflow-x: hidden;
+}
+
+.btn{
+  font-size: 2rem;
+  font-weight: bold;
+  padding:.7rem 3.5rem;
+  border-radius: 5rem;
+  color:var(--color-primary);
+  background:var(--color-enfasis);
+  margin-top: 1rem;
+  box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
+  cursor: pointer;
+  border:none;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+}
+
+.btn::before{
+  content: '';
+  position: absolute;
+  top:0; right: 0;
+  height:100%;
+  width:0%;
+  background:var(--color-enfasis);
+  z-index: -1;
+  transition: .2s linear;
+}
+
+.btn:hover::before{
+  left: 0;
+  width:100%;
+}
+/* **********************/
+/* section H E A D E R  */
+/* **********************/
+header{
+  width:100%;
+  height: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: fixed;
-  width: 100%;
-  z-index: 100;
-  top: 0;
+  top:0; left: 0;
+  z-index: 1000;
+  padding:2rem 7%;
+  background:rgba(0,0,0,.8);
 }
-#inicio header .contenido-header {
-  max-width: 1100px;
-  margin: auto;
+header .logo img{
+  width: 10rem;
+}
+header .navbar ul{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+}
+header .navbar ul li a{
+  font-size: 2rem;
+  margin-left: 2rem;
+  color:#fff;
+  position: relative;
+}
+header .navbar ul li a::before{
+  content: '';
+  position: absolute;
+  bottom:-.5rem; right:0;
+  width:0%;
+  height:.2rem;
+  background:var(--color-enfasis);
+  transition: .2s linear;
+}
+header .navbar ul li a.active::before,
+header .navbar ul li a:hover::before{
+  left:0;
+  width:100%;
+}
+header #menu{
+  font-size: 3rem;
+  color:#fff;
+  cursor: pointer;
+  display: none;
+}
+/* *******************/
+/* section H O M E  */
+/* *****************/
+.home{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  flex-wrap: wrap;
+  background:url(./assets/img/bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding:1.5rem 12%;
+  padding-top: 4rem;
+}
+.home .content{
+  width: 68%;
+}
+.home .content h1{
+  font-size: 7rem;
+  color:var(--color-enfasis);
+  text-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
+  
+}
+.home .content p{
+  font-size: 1.8rem;
+  color:#eee;
+  padding:.5rem 0;
+}
+.home .content .btn{
+  background:#fff;
+  color:#333;
+}
+.home .content .btn:hover{
+  color:#fff;
+}
+.home #burbuja-1 img{
+  position: absolute;
+  border-radius: 0% 0% 0% 140%;
+  width: 40%;
+  top:8rem;
+  right:-10rem;
+}
+.home #burbuja-2 img{
+  position: absolute;
+  border-radius:120% 50% 40% 30%;
+  width: 40%;
+  height: 50%;
+  bottom:2rem;
+  right:0rem;
+  transform: rotate(-5deg);
+}
+/* *********************/
+/* section A B O U T  */
+/* *******************/
+.about{
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: linear-gradient(rgba(0, 0, 0, 0.2)10%, rgba(0, 0, 0, 0.7)80%),
+    url("./assets/img/bg-2.jpg");
+  background-size: cover;
+  background-position: center center;
+  padding:2rem;
+  padding-top: 6rem;
+}
+.about .image{
+  flex:1 1 40rem;
+  text-align: center;
+  padding:4rem 0;
+}
+.about .image img{
+  height:15vh;
+}
+.about .content{
+  flex:1 1 40rem;
+}
+.about .content h1{
+  font-size: 1.5rem;
+  color:#fff;
+  letter-spacing: .5rem;
+  padding-left: 1rem;
+}
+.about .content h3{
+  font-size: 6rem;
+  color:#fff;
+}
+.about .content .heading{
+  background:rgba(0,0,0,.3);
+}
+.about .content p{
+  font-size: 1.5rem;
+  color:#eee;
+  padding:1rem 0;
+}
+.about .content ul li{
+  list-style: none;
+  font-size: 2rem;
+  color:#fff;
+  padding:.5rem 0;
+}
+.about .content ul li i{
+  color:var(--color-enfasis);
+}
+/* ***************************/
+/* section F E A T U R E S  */
+/* *************************/
+.features{
+  min-height: 100vh;
+  text-align: center;
+  background: linear-gradient(rgba(0, 0, 0, 0)50%, rgba(0, 0, 0, 0.7)80%),
+    url("./assets/img/bg-3.jpg");
+  background-size: cover;
+  background-position: center center;
+  padding-top: 15rem;
+}
+.features h1.heading{
+  padding:1rem 0;
+  margin:0 auto;
+  width:70rem;
+  color:#fff;
+  font-size: 4rem;
+}
+.features .description{
+  padding:1rem 0;
+  margin:0 auto;
+  width:70rem;
+  color:#666;
+  font-size: 1.5rem;
+}
+.features .box-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.features .box-container .box{
+  margin:2rem;
+  width:28rem;
+  z-index: 0;
+  position: relative;
+}
+.features .box-container .box::before{
+  content: '';
+  position: absolute;
+  top:32.5%; left:50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  background:var(--color-enfasis);
+  height: 10rem;
+  width: 10rem;
+  z-index: -1;
+  box-shadow: 0 0 0 1rem rgba(0, 0, 0, .6);
+}
+.features .box-container .box i{
+  color:#fff;
+  font-size: 4.5rem;
+  margin:8rem 0;
+}
+.features .box-container .box h3{
+  color:#121212;
+  font-size: 2rem;
+}
+.features .box-container .box p{
+  color:#999;
+  font-size: 1.2rem;
+  padding:1rem 0;
+}
+/* ***************************/
+/* section P R O D U C T S  */
+/* *************************/
+.product{
+  min-height: 100vh;
+  text-align: center;
+  background:#eee;
+  padding:1rem;
+  padding-top: 15rem;
+}
+.product h1{
+  font-size: 4rem;
+  padding-bottom: 2rem;
+}
+.product .box-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding:1rem 0;
+}
+.product .box-container .box{
+  margin:1rem;
+  background:#fff;
+  box-shadow: 0 .3rem .5rem rgba(0,0,0,.3);
+  padding:2rem 4rem;
+}
+.product .box-container .box h3{
+  padding:1rem 0;
+  font-size: 2rem;
+  color:#444;
+}
+.product .box-container .box .price{
+  padding:1rem 0;
+  font-size: 3rem;
+  color:#333;
+  display: block;
+}
+.product .box-container .box img{
+  height:20rem;
+  width:20rem;
+  margin:1rem 0;
+}
+/* *************************/
+/* section C O N T A C T  */
+/* ***********************/
+.contact{
+  min-height: 60vh;
+  text-align: center;
+  background:linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)), url(../images/contact.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  padding:1rem;
+  padding-top: 8rem;
+}
+.contact .heading{
+  background:rgba(0,0,0,.5);
+  color:#fff;
+  font-size: 4rem;
+}
+.contact .title{
+  color:#fff;
+}
+.contact form{
+  width:85%;
+  margin:1rem auto;
+}
+.contact form .inputBox{
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 10px 20px;
+  flex-wrap: wrap;
 }
-#inicio header .contenido-header h1 {
-  text-align: center;
-  color: var(--color-enfasis);
+.contact form .inputBox input, .contact form textarea{
+  height:4rem;
+  width:49%;
+  padding:0 1rem;
+  margin:1rem 0;
+  font-size: 2rem;
+  border:.2rem solid #eee;
+  background:none;
+  text-transform: none;
+  color:#fff;
 }
-#inicio header .contenido-header nav ul {
-  list-style: none;
+.contact form .inputBox input::placeholder, .contact form textarea::placeholder{
+  color:#ccc;
+}
+.contact form .inputBox input:focus, .contact form textarea:focus{
+  border-color:var(--color-enfasis);
+}
+.contact form textarea{
+  height:20rem;
+  width:100%;
+  padding:1rem;
+  resize: none;
+}
+.contact form .btn:hover{
+  background:#fff;
+  color:#333;
+}
+/* ************************/
+/* section F O O T E R  */
+/* *********************/
+.footer{
+  background:#eee;
+}
+.footer .box-container{
   display: flex;
-  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-#inicio header .contenido-header nav ul li a {
-  text-decoration: none;
-  color: #fff;
-  margin: 0 12px;
-  font-weight: 400;
-  transition: 0.5s;
+.footer .box-container .box{
+  flex:1 1 30rem;
+  margin:2rem;
 }
-#inicio header .contenido-header nav ul li a:hover {
-  color: var(--color-enfasis);
+.footer .box-container .box h3{
+  font-size: 2.5rem;
+  color:var(--color-enfasis);
 }
-#inicio header .contenido-header .redes a {
-  text-decoration: none;
-  color: #fff;
-  display: inline-block;
-  margin-left: 10px;
-  transition: 0.5s;
+.footer .box-container .box p{
+  font-size: 1.5rem;
+  color:#333;
+  padding:1rem 0;
 }
-#inicio header .contenido-header .redes a:hover {
-  color: var(--color-enfasis);
+.footer .box-container .box p i{
+  padding:0 .5rem;
+  color:var(--color-enfasis);
 }
-#inicio header .contenido-header .seleccionado {
-  color: var(--color-enfasis);
+.footer .box-container .box:nth-child(2){
+  text-align: center;
 }
-#inicio header #icono-nav {
-  color: #fff;
-  display: none;
+.footer .box-container .box a{
+  font-size: 1.8rem;
+  display:block;
+  color:#333;
+  padding:.5rem 0;
+}
+.footer a:hover{
+  text-decoration: underline;
+}
+.footer .credit{
+  padding:2rem 1rem;
+  text-align: center;
+  background:#333;
+  color:#eee;
+  font-size: 1.4rem;
+}
+.footer .credit a{
+  color:#fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media queries  */
+
+@media (max-width:768px){
+
+  html{
+      font-size: 55%;
+  }
+
+  header #menu{
+      display: block;
+  }
+  
+  header .navbar{
+      position: fixed;
+      top:-120%; left:0;
+      width:100%;
+      background:#fff;
+      opacity: 0;
+  }
+
+  header .navbar ul{
+      padding:2rem 0;
+      flex-flow: column;
+      justify-content: center;
+  }
+
+  header .navbar ul li a{
+      font-size: 2.5rem;
+      color:#333;
+      display: block;
+      margin:1rem 0;
+  }
+
+  header .navbar ul li a::before{
+      background:#333;
+  }
+
+  .fa-times{
+      transform: rotate(180deg);
+  }
+
+  header .navbar.nav-toggle{
+      top:7.4rem;
+      opacity: 1;
+  }
+
+  .home .content{
+      text-align: center;
+  }
+
+  .features .description{
+      width:auto;
+      padding:1rem;
+  }
+
+  .contact form{
+      width:95%;
+  }
+
+}
+
+@media (max-width:500px){
+
+  html{
+      font-size: 50%;
+  }
+
+  .home .content h1{
+      font-size: 3.5rem;
+  }
+
+  .about .image img{
+      width:80%;
+      height:auto;
+  }
+
+  .contact form .inputBox input{
+      width:100%; 
+  }
+
 }
